[gd_scene load_steps=13 format=3 uid="uid://s6ok5pxmaod6"]

[ext_resource type="Script" path="res://menus/save_menu/save_menu.gd" id="1_v5una"]
[ext_resource type="PackedScene" uid="uid://bwhlnfpn8hjus" path="res://menus/save_menu/save_slot_ui.tscn" id="2_bihf2"]
[ext_resource type="Texture2D" uid="uid://c1t2fl5ginevd" path="res://menus/save_menu/save_menu.png" id="2_dqne5"]
[ext_resource type="Script" path="res://menus/start_menu/scrolling_bg.gd" id="3_dgtsx"]
[ext_resource type="Theme" uid="uid://margarita" path="res://menus/start_menu/main_menu_theme.tres" id="4_lmdg1"]
[ext_resource type="Script" path="res://menus/button_hover.gd" id="5_21s6t"]

[sub_resource type="LabelSettings" id="LabelSettings_28mvr"]
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 11
shadow_color = Color(0, 0, 0, 0.245)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_342mj"]
bg_color = Color(0.972549, 0.537255, 0.227451, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 0.85098, 0.733333, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_ncjyp"]
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 11
shadow_color = Color(0, 0, 0, 0.245)

[sub_resource type="Animation" id="Animation_tsl37"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slots/Slot1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slots/Slot1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_m7ef4"]
resource_name = "enter"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slots/Slot1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slots/Slot1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(40, 0, 0, 0, 0, 0, -0.3, -12.9443, 0.133333, -1.82447),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Slots/Slot2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Slots/Slot2:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(40, 0, 0, 0, 0, 0, -0.3, -12.9443, 0.133333, -1.82447),
"times": PackedFloat32Array(0.2, 0.7)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Slots/Slot3:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Slots/Slot3:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(40, 0, 0, 0, 0, 0, -0.3, -12.9443, 0.133333, -1.82447),
"times": PackedFloat32Array(0.4, 0.9)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0pgax"]
_data = {
"RESET": SubResource("Animation_tsl37"),
"enter": SubResource("Animation_m7ef4")
}

[node name="SaveMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 574.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v5una")

[node name="ClipBg" type="ColorRect" parent="."]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -2249.0
offset_right = 15.0
offset_bottom = 2249.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.32, 0.24256, 0.2144, 1)

[node name="Background" type="TextureRect" parent="ClipBg"]
texture_repeat = 2
layout_mode = 0
offset_left = -2817.0
offset_top = -160.0
offset_right = 3985.0
offset_bottom = 5216.0
texture = ExtResource("2_dqne5")
stretch_mode = 1
script = ExtResource("3_dgtsx")
scroll_position = Vector2(500, -250)
scroll_time = 15.0

[node name="ClipBg2" type="ColorRect" parent="ClipBg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.131)
metadata/_edit_lock_ = true

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -72.0
offset_right = -25.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(82, 21)
theme = ExtResource("4_lmdg1")
text = "Back"
script = ExtResource("5_21s6t")

[node name="Slots" type="Control" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 235.0
offset_top = -100.0
offset_right = -235.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Slot1" parent="Slots" instance=ExtResource("2_bihf2")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 200.0
offset_bottom = 200.0

[node name="Slot2" parent="Slots" instance=ExtResource("2_bihf2")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 240.0
offset_right = 440.0
offset_bottom = 200.0
slot = 2

[node name="Slot3" parent="Slots" instance=ExtResource("2_bihf2")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 480.0
offset_right = 680.0
offset_bottom = 200.0
slot = 3

[node name="BottomButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -155.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="UnselectedPlaceholder" type="Label" parent="BottomButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Select a Save"
label_settings = SubResource("LabelSettings_28mvr")

[node name="LoadSaveBox" type="Control" parent="BottomButtons"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(160, 60)
layout_mode = 2

[node name="LoadSaveButton" type="Button" parent="BottomButtons/LoadSaveBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 60)
layout_mode = 0
offset_right = 160.0
offset_bottom = 60.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_342mj")
theme_override_styles/hover = SubResource("StyleBoxFlat_342mj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_342mj")
theme_override_styles/normal = SubResource("StyleBoxFlat_342mj")
script = ExtResource("5_21s6t")

[node name="LoadSaveLabel" type="Label" parent="BottomButtons/LoadSaveBox/LoadSaveButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -20.5
offset_right = 44.5
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Load Slot 1"
label_settings = SubResource("LabelSettings_ncjyp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WriteSaveBox" type="Control" parent="BottomButtons"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(160, 60)
layout_mode = 2

[node name="WriteSaveButton" type="Button" parent="BottomButtons/WriteSaveBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 60)
layout_mode = 0
offset_right = 160.0
offset_bottom = 60.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_342mj")
theme_override_styles/hover = SubResource("StyleBoxFlat_342mj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_342mj")
theme_override_styles/normal = SubResource("StyleBoxFlat_342mj")
script = ExtResource("5_21s6t")

[node name="WriteSaveLabel" type="Label" parent="BottomButtons/WriteSaveBox/WriteSaveButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -20.5
offset_right = 55.5
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Save to Slot 1"
label_settings = SubResource("LabelSettings_ncjyp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0pgax")
}
autoplay = "enter"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="BottomButtons/LoadSaveBox/LoadSaveButton" to="." method="_on_load_save_button_pressed"]
[connection signal="pressed" from="BottomButtons/WriteSaveBox/WriteSaveButton" to="." method="_on_write_save_button_pressed"]
